[workspace]
members = [
    "curve25519",
    "chacha20",
    "chacha20-rust",
    "poly1305",
    "chacha20poly1305",
    "gimli",
    "sha256",
    "sha256-rust",
    "sha3",
    "hmac",
    "hkdf",
    "p256",
    "bls12-381",
    "ecdsa-p256-sha256",
    "aes",
    "aes_jazz",
    "gf128",
    "aes128-gcm",
    "bls12-381-hash",
    "edwards25519",
    "ed25519",
    "pasta",
]
