[package]
name = "hacspec-bip-340"
version = "0.1.0"
authors = ["Jonas Nick <jonasd.nick@gmail.com>"]
edition = "2018"
description = "A BIP 340 implementation compatible with https://github.com/bitcoin/bips/blob/master/bip-0340.mediawiki."

[lib]
path = "src/bip-340.rs"

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec.git" }
hacspec-sha256 = { path = "../sha256" }

group = "0.13"
ff = "0.13"
subtle = "*"
rand_core = "0.6"

hacspec-concordium = { path = "../concordium" } # 4d4b024b547a1f120f6d6951cbc409c94f8f146a
hacspec-concordium-derive = { path = "../concordium-derive" } # 4d4b024b547a1f120f6d6951cbc409c94f8f146a

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}


