[package]
name = "hacspec-curve25519"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[lib]
path = "src/curve25519.rs"

[dependencies]
hacspec-lib.workspace = true

[dev-dependencies]
hacspec-dev.workspace = true
criterion = "0.4"
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false
