[package]
name = "hacspec-halo2"
version = "0.1.0"
authors = ["Lasse Bramer Schmidt <lassebramer@gmail.com>", "Rasmus Tomtava Bjerg <rs.bjerg@gmail.com>"]
edition = "2018"

[lib]
path = "src/halo2.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }
hacspec-pasta = { path = "../pasta" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.5"
