[package]
name = "hacspec-ntru-prime"
version = "0.1.0"
authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"

[lib]
path = "src/ntru-prime.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hacspec-lib.workspace = true
hacspec-derive.workspace = true
secret_integers.workspace = true
abstract_integers.workspace = true

[dev-dependencies]
serde_json = "1.0"
serde = {version = "=1.0.156", features = ["derive"]}
rayon = "1.3.0"
