[package]
name = "poly1305"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "hacspec poly1305 message authentication code"
readme = "README.md"
repository = "https://github.com/hacspec/specs"

[lib]
path = "src/poly1305.rs"

[dependencies]
num-bigint = "0.4"
natmod = { path = "./natmod" }

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.3.0"
criterion = "0.4"
rand = "0.8"
