[package]
name = "hacspec-polynomial"
version = "0.1.0"
authors = ["Lasse Bramer Schmidt <lassebramer@gmail.com>", "Rasmus Tomtava Bjerg <rs.bjerg@gmail.com>"]
edition = "2018"

[lib]
path = "src/polynomial.rs"

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec.git" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
