[package]
name = "hacspec-sha256"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[lib]
path = "src/sha256.rs"

[dependencies]
hacspec-lib.workspace = true
hacspec-derive.workspace = true
secret_integers.workspace = true
abstract_integers.workspace = true
