[package]
name = "hacspec-weierstrass"
version = "0.1.0"
authors = ["Lasse Bramer Schmidt <lassebramer@gmail.com>", "Rasmus Tomtava Bjerg <rs.bjerg@gmail.com>"]
edition = "2018"

[lib]
path = "src/weierstrass.rs"

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec.git" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.5"
